--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   animated_text_kit: ^4.2.2
+  http: ^1.0.0
+  provider: ^6.0.5
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
