--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^1.0.0
   provider: ^6.0.5
   loading_animation_widget: ^1.2.0+4
+  path_provider: ^2.0.15
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
