--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   path_provider: ^2.0.15
   shared_preferences: ^2.1.1
+  connectivity_plus: ^4.0.1
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
