--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   shared_preferences: ^2.1.1
   connectivity_plus: ^4.0.1
   fluttertoast: ^8.2.2
+  url_launcher: ^6.1.12
+  webview_flutter: ^4.2.2
 
 dev_dependencies:
   flutter_test:
